# ic-load

./: .env.example  .env.icalps.example  .gitignore  MANIFEST.yaml  README.md  cleanup_runner_plan.md  deal_stage_mapper.py  get_silver_fill_rates.py  library_runner_plan.md  merge_resolution_matrix.md  operator-cleanup.md  operator-library.md  operator-scaffold.md  operator-sequel.md  pyproject.toml  requirements.txt  salvation.md  silver_normalise.py  validate_silver.py
.claude/: settings.local.json
.devcontainer/: devcontainer.json  post-create.sh
GomplateRepoMix/: Makefile  README.md  business_rules.yaml  fk_cascade_graph.mmd  render_associations.sh  repomix.config.json  run_context.yaml  schema_context.yaml  staging_metadata_snapshot.json  text_normalization_rules.yaml
ValidationRules/: icalps_crm_schema.yaml  icalps_import_flags.md
_archive/: README.md  staging_resolution_probe.py
context/: README.md  __init__.py  config.py  db.py
dbt/: dbt.md  dbt_project.yml  dbt_stacksync.md  profiles.yml
docs/: AD_HOC_TRANSFORM_CONTEXT.md  ASSOCIATION_PROBE_TECHNICAL_STATE.md  CANONICAL_EXECUTION_SPEC.md  CONTEXT_PACKAGING_PROCESS.md  FUNCTIONALITY_COVERAGE_MATRIX.md  LEGACY_IMPORT_MAP.md  LIVE_POSTGRES_SMOKE_TEST.md  OPERATIONAL_CHECKS.md  RAW_CSV_TO_STAGING_SNIPPET.md  TARGET_REPO_ARCHITECTURE.md  TRACEABILITY.md  diagnostic_queries.sql  salvation.md
extra/: group_rename_candidates_v1.csv  ontology_hsproperty_metadata_archive.xlsx  properties_to_delete.csv  sealsq_icalps_companies.csv
hubspot-client/: .env.example  config.py  create_form.py
legacy/: __init__.py  silver_normalise.py  validate_silver.py
pipeline/: README.md  __init__.py  associations.py  bronze.py  csv_export.py  dedupe.py  dedupe_probe.py  gold.py  live_smoke.py  probe.py  raw_to_staging_snippet.py  runner.py  silver.py  silver_company.py  state.py  sync.py  text_normalization.py
scripts/: codespace-smoke.sh  probe_schemas.py
sql/: README.md  __init__.py  render.py
tests/: README.md  __init__.py  test_config_bronze_dir.py  (+8 more)
(+197 files in other folders)
